--- a/_posts/2019-07-10-the-us-narrative-today.html
+++ b/_posts/2019-07-10-the-us-narrative-today.html
@@ -2508,5 +2508,108 @@ stories:
   state: Minnesota
   domain: http://www.republican-eagle.com/
   link: https://www.republican-eagle.com/news/crime-and-courts/4634580-minneapolis-man-gets-nine-years-cannon-falls-home-invasion
+images:
+- name: two-sattelite-dishes-norman-rockwell-ruby-bridges.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/two-sattelite-dishes-norman-rockwell-ruby-bridges.jpg
+- name: containership-containership-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-gred-mash.jpg
+- name: store-on-corner-store-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-store-green-zuma.jpg
+- name: power-lines-power-lines-empty-space-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-internet-numbers.jpg
+- name: razorwire-DSC-0080-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-dark-rain.jpg
+- name: aws-s3-canyon-canyon-still-1200.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-canyon-canyon-still-1200.jpg
+- name: store-on-corner-oldcabin-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-satan-red.jpg
+- name: bluelake-cinnamon-rolls-file-00-00-38-67.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-cinnamon-rolls-file-00-00-38-67.jpg
+- name: udnie-IMG_7319.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/udnie-IMG_7319.jpg
+- name: docks-docks-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-plentiful.jpg
+- name: gears-4882162452-fa3126b38d-b-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gears-4882162452-fa3126b38d-b-dali-three.jpg
+- name: castle-wall-DSC-0067.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067.JPG
+- name: windowmountain-window-mountain-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-emily-carr.jpg
+- name: pigeons-on-the-ledge-pigeons-on-ledge-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/pigeons-on-the-ledge-pigeons-on-ledge-really-hot.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-dark-soul.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-dark-soul.jpg
+- name: yuma-bank-yuma-bak-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yuma-bank-yuma-bak-colorful-dream.jpg
+- name: flower-barbed-wire-flower-barbed-wire-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-blue-electricity.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-oily-mcoilface.jpg
+- name: birdhouse-birdhouse-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-clean-view.jpg
+- name: razorwire-DSC-0080-crabapple.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-crabapple.jpg
+- name: status-berlin-status-berlin-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-atari-asteroids.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-monet-one.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-monet-one.png
+- name: old-church-oldchurch-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-church-oldchurch-really-hot.jpg
+- name: lost-angeles-downtown-freeway-los-angeles-downtow-freeway-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lost-angeles-downtown-freeway-los-angeles-downtow-freeway-diego-rivera1.jpg
+- name: stories-containership-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-containership-blue-circuit.jpg
+- name: aws-s3-square-68-161-800-500-0-max-0--5--1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-68-161-800-500-0-max-0--5--1.jpg
+- name: miamibeach-miamibeach-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-green-zuma.jpg
+- name: oldhouse-granaryfield-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-umberto-bocc.jpg
+- name: christianity-christianity-under-construction-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-alien-goggles.jpg
+- name: bordercrossing-bordercrossing-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-matrix.jpg
+- name: abandonedbuildings_emily_carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_emily_carr.jpg
+- name: subway-subway-ww2-color.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-ww2-color.jpg
+- name: cannon-facing-cannon-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cannon-facing-cannon-copper-circuit.jpg
+- name: razorwire-DSC-0080-kand-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorwire-DSC-0080-kand-two.jpg
+- name: miamibeach-miamibeach-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-emily-carr.jpg
+- name: old-house-oldhouse-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-house-oldhouse-colored-circuits.jpg
+- name: abe-lincoln-one-rainbow-festival-file-00-00-07-91.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-rainbow-festival-file-00-00-07-91.jpg
+- name: flower-barbed-wire-flower-barbed-wire-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-internet-numbers.jpg
+- name: soldier-kneeling-26304845730-d4e495e25f-o-umberto-bocc.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldier-kneeling-26304845730-d4e495e25f-o-umberto-bocc.jpg
+- name: white-house-lawn-white-house-lawn-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-colored-circuits.jpg
+- name: hollywood-building-hollywood-building-dry-skin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-dry-skin.jpg
+- name: castle-on-hill-castle-on-hill-edinburgh.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-on-hill-castle-on-hill-edinburgh.JPG
+- name: capital-battle-capitolbattle-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-green-zuma.jpg
+- name: border-crossing-bordercrossing-smoking-cigarette.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-smoking-cigarette.png
+- name: aws-s3-smithriver-smithriver-still.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-smithriver-smithriver-still.jpg
+- name: oldroad-old-road-blue-electricity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-blue-electricity.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-blue-circuit-3.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-blue-circuit-3.jpg
+- name: amusement-park-amusement-park-2-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/amusement-park-amusement-park-2-hot-spicy.jpg
+- name: nazi-invasion-DSC_0044-001.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-DSC_0044-001.jpg
+- name: oldhouse-granaryfield-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-cinnamon-rolls.jpg
+- name: statue-of-liberty-front-view-statueofliberty-sand-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-sand-paper.jpg
 ---
 June Subscriber Promotion Winner.&nbsp;Raiderettes Come Back Against Lady Tigers To Win Championship.&nbsp;Its Take Two On The Raising Canes River Center Theater Rebid.&nbsp;Judge Stops Government Lawyers Quitting Census Question Case.&nbsp;Spring Ho Festival To Kick Off Monday.&nbsp;Logan Football Camp Gets Started Monday.&nbsp;Mosquito Spraying After Flooding.&nbsp;Daughter In Bedroom Next Door Frowns On Moms Relationship.&nbsp;
